--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,15 +5,12 @@
 
   <body>
 
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
+    <div id="comming-soon">
+        <img id="lmno-logo" src={{ "/assets/lmno-logo-white.png" | prepend: site.baseurl }}  alt="ELemeno Logo">
+      <div id="cs-description">
+        <h1>COMMING SOON</h1>
       </div>
     </div>
-
-    {% include footer.html %}
 
   </body>
 
