--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -234,3 +234,47 @@
         }
     }
 }
+
+body{
+    background: url('/assets/bg-grafitti.jpg') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#comming-soon{
+    width: 320px;
+    height: 100vh;
+    margin: 0 auto;
+
+    #lmno-logo {
+        width: 100%;
+    }
+    #logo-wrapper {
+        margin: 0 auto;
+        height: 50%;
+        
+    }
+
+    h1 {
+        color: white;
+        font-family: 'Exo 2', sans-serif;
+        font-size: 2.5em;
+        letter-spacing: 6px;
+        line-height: 1.2em;
+        text-align: center;
+        text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+    }
+
+    
+}
+@media (orientation: portrait){
+    #comming-soon{
+        background-size: auto 100vh;
+
+        #logo-wrapper{
+            max-width: 90vw;
+        }
+    }
+}
