--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <div id="comming-soon">
         <img id="lmno-logo" src={{ "/assets/lmno-logo-white.png" | prepend: site.baseurl }}  alt="ELemeno Logo">
       <div id="cs-description">
-        <h1>COMMING SOON</h1>
+        <h1>COMING SOON</h1>
       </div>
     </div>
 
