--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,6 @@
   <link href='http://fonts.googleapis.com/css?family=Exo+2:500' rel='stylesheet' type='text/css'>
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="js/jquery.countdown.min.js"></script>
 </head>
