--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -241,6 +241,8 @@ body{
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+
+    font-family: 'Exo 2', sans-serif;
 }
 
 #comming-soon{
@@ -259,8 +261,7 @@ body{
 
     h1 {
         color: white;
-        font-family: 'Exo 2', sans-serif;
-        font-size: 2.5em;
+        font-size: 2em;
         letter-spacing: 6px;
         line-height: 1.2em;
         text-align: center;
@@ -277,4 +278,14 @@ body{
             max-width: 90vw;
         }
     }
+}
+
+#getting-started{
+    color: white;
+    text-align: center;
+    font-size: 2.3em;
+    letter-spacing: 0;
+    font-family: monospace;
+    border: 3px solid white;
+    margin: 20px;
 }
