--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -236,11 +236,12 @@
 }
 
 body{
-    background: url('/assets/bg-grafitti.jpg') no-repeat center center fixed; 
+    background: url('/assets/bg-grafitti-min.jpg') no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    background-color: #232323;
 
     font-family: 'Exo 2', sans-serif;
 }
