add hover function to to countdown

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,16 +10,13 @@
 	    <div id="cs-description">
 	      <h1>COMING SOON</h1>
 	    </div>
-		<div id="getting-started"></div>
+		<div id="getting-started">
+		</div>
     </div>
       
 	 <script type="text/javascript">
-	   $("#getting-started")
-	   .countdown("2015/06/01", function(event) {
-	     $(this).text(
-	       event.strftime('%D %H  %M %S')
-	     );
-	   });
+	   $("#getting-started").countdown("2015/06/01", function(event){$(this).text(event.strftime('%D %H  %M %S'));});
+	   $("#getting-started").hover(function(){$('#getting-started').countdown('stop');$(this).text("DD HH MM SS")}, function(){$('#getting-started').countdown('resume')});
 	 </script>
 
   </body>
