--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,43 @@
     <div id="comming-soon">
         <img id="lmno-logo" src={{ "/assets/lmno-logo-white.png" | prepend: site.baseurl }}  alt="ELemeno Logo">
 	    <div id="cs-description">
-	      <h1>COMING SOON</h1>
+	      <h1 class="shadow">COMING SOON</h1>
 	    </div>
 		<div id="getting-started">
+		</div>
+
+		<hr>
+		<div  class="contact-icons animated fadeInUp">
+
+			<h1 id="meanwhile" class="shadow">
+				MEANWHILE CONNECT
+				 WITH US HERE:
+			</h1>
+
+			<hr><br>
+
+			<ul>
+				<li>
+					<a target="_blank" href="http://soundcloud.com/ElemenoCollective">
+						<img class="shadow" src="/assets/icons/cloud-icon.svg" alt="soundcloud icon">
+					</a>
+				</li>
+				<li>
+					<a target="_blank" href="http://facebook.com/ElemenoOfficial">
+						<img class="shadow" src="/assets/icons/face-icon.svg" alt="facebook icon">
+					</a>
+				</li>
+				<li>
+					<a target="_blank" href="http://twitter.com/ElemenoOfficial">
+						<img class="shadow" src="/assets/icons/twitter-icon.svg" alt="twitter icon">
+					</a>
+				</li>
+				<li>
+					<a target="_blank" href="http://youtube.com/ElemenoOfficial">
+						<img class="shadow" src="/assets/icons/youtube-icon.svg" alt="youtube icon">
+					</a>
+				</li>
+			</ul>
 		</div>
     </div>
       
