fix margim-bottom for icons and fix youtube link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
 					</a>
 				</li>
 				<li>
-					<a target="_blank" href="http://youtube.com/ElemenoOfficial">
+					<a target="_blank" href="https://www.youtube.com/channel/UCubsB5sJevfKXenM7QWA55g">
 						<img class="shadow" src="/assets/icons/youtube-icon.svg" alt="youtube icon">
 					</a>
 				</li>
