--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="{{STATIC_URL}}pinax/images/SnapEDA.ico"/>
+  <link rel="icon" type="image/x-icon" href="{{ "/assets/icons/lmno-icon.ico" | prepend: site.baseurl }}"/>
 
   <title>ELEMENO CREATIVE COLLECTIVE - Coming soon</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
