--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -236,7 +236,7 @@
 }
 
 body{
-    background: url('/assets/bg-grafitti-min.jpg') no-repeat center center fixed; 
+    background: url('/assets/bg-buildings.png') no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
