--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
 		</div>
 	</div>
 
+
 	<div id="section2" class="section">
 
 		<p>
@@ -54,10 +55,10 @@
 			</h2>
 
 			<p>
-				Send us a message and some of your work in the <a href="#contact">Submit Section</a>. Let us know what you would bring to the table to benefit our team!
+				Send us a message and some of your work in the <a href="/#contact">Submit Section</a>. Let us know what you would bring to the table to benefit our team!
 			</p>
 		</div>		
-
+		<a name="contact"></a>
 		<div class="dark">
 
 			{% include g_form.html %}
