--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,9 +21,13 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
   <!-- JQUERY -->
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script type="text/javascript">H5F.setup(document.getElementById('ss-form'));
       _initFormViewer("[100,,[]\n]\n", true);
   </script>
+
+  <!-- <script type="text/javascript" src="http://click.dj/assets/overlay/jquery.overlay-1.3.4.pack.js"></script>
+   <script type="text/javascript" src="http://click.dj/site/userdata/code?s=elemenocollective"></script>
+  <link rel="stylesheet" href="http://click.dj/assets/overlay/jquery.overlay-1.3.4.css" type="text/css" media="screen" >  -->
 </head>
