--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class=" pull-right navbar-collapse cl-effect-6">
       <ul class="nav navbar-nav ">
-        <li class="active"><a href="#">ELEMENO <span class="sr-only">(current)</span></a></li>
-        <li class="active"><a href="#"> DOWNLOADS </a></li>
-        <li class="active"><a href="#contact">CONTACT </a></li>
+        <li class="active"><a href="/">ELEMENO <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="/downloads.html"> DOWNLOADS </a></li>
+        <li class="active"><a href="/#contact">CONTACT </a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
