--- a/css/main.scss
+++ b/css/main.scss
@@ -309,6 +309,18 @@ textarea{
 	color: #232323;
 }
 
+.page-heading{
+	padding: 0.5em;
+	font-size: 5em;
+	text-align: center;
+}
+
+.page-content > .section{
+	padding: 2em;
+}
+
+
+//  MEDIA QUERIES
 
 @media (max-width: 1280px){
 	#top-desc h1{
@@ -375,6 +387,12 @@ textarea{
 }
 
 @media (max-width: 767px){
+
+	.section{
+		height: 100%;
+		margin-bottom: 50px;
+	}
+
 	 .nav>li {
 	  display: inline;
 	  float: left;
