--- a/css/main.scss
+++ b/css/main.scss
@@ -408,6 +408,9 @@ textarea{
 	.section{
 	}
 
+	#section2{
+		background: url('/assets/dundas-square.png') center center; 
+	}
 	.ss-form-container{
 		margin-left: 10px;
 
