fix background for mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -405,6 +405,10 @@ textarea{
 
 @media (max-width: 420px) and (orientation: portrait){
 
+	body{
+	    background-size: auto 100vh;
+    }
+
 	.section{
 		overflow-x: hidden; 
 	}
