--- a/css/main.scss
+++ b/css/main.scss
@@ -418,8 +418,7 @@ textarea{
 	}
 
 	#section2{
-		background-image: none; //url('/assets/dundas-square.png') center center; 
-		background-color: white;
+		background-image: url('/assets/dundas-square.png') center center; 
 	}
 	.ss-form-container{
 		margin-left: 10px;
