adjust section2 bg

--- a/css/main.scss
+++ b/css/main.scss
@@ -419,6 +419,7 @@ textarea{
 
 	#section2{
 		background-image: url('/assets/dundas-square.png') center center; 
+		background-size: auto 100vw;
 	}
 	.ss-form-container{
 		margin-left: 10px;
