--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1, user-scalable=no">
   <link rel="icon" type="image/x-icon" href="{{ "/assets/icons/lmno-icon.ico" | prepend: site.baseurl }}"/>
   <meta property="og:image" content="{{ "/assets/lmno-logo.png" | prepend: site.baseurl }}" />
+  <link rel="image_src" href="{{ "/assets/lmno-logo.png" | prepend: site.baseurl }}" />
   <meta property="og:title" content="Elemeno Creative Collective" />
   <meta property="og:description" content="Create, Inspire, Motivate." />
 
