update website title

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Elemeno Creative Collective" />
   <meta property="og:description" content="Create, Inspire, Motivate." />
 
-  <title>ELEMENO CREATIVE COLLECTIVE - Coming soon</title>
+  <title>ELEMENO CREATIVE COLLECTIVE</title>
 
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
