fix sections resizing

--- a/_includes/g_form.html
+++ b/_includes/g_form.html
@@ -87,6 +87,7 @@
                   </div>
                 </label>
                 <textarea name="entry.98115474" 
+                          class="ss-long-input" 
                           placeholder="Include link to media with a brief description if submitting"
                           id="entry_98115474" 
                           dir="auto" 
