--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
 
 		<div id="top-logo">
 				<img src="{{ "/assets/lmno-logo.png" | prepend: site.baseurl }}" alt="">
+			<!-- <a href="#" id="homeLogo">LMNO LOGO
 			</a> -->
 		</div>
 			
