--- a/css/main.scss
+++ b/css/main.scss
@@ -162,6 +162,7 @@ a{
 
 .dark, .white{
 	width: 50%;
+	min-height: 100vh;
 	height: 100%;
 	float: left;
 }
@@ -207,12 +208,8 @@ a{
 }
 
 
-#top-nav{
-}
-
 .nav{
-
-margin: 0 auto;
+	margin: 0 auto;
 }
 
 .nav a{
@@ -265,6 +262,10 @@ font-size: 0.8em;
 
 .custom-select select:focus {
   outline: none;
+}
+
+.ss-q-short, .custom-select, .ss-form-question, .ss-long-input{
+	margin: 10px 0;
 }
 
 .ss-required-asterisk{
@@ -322,6 +323,12 @@ textarea{
 
 //  MEDIA QUERIES
 
+@media (max-height: 800px){
+	body{
+		font-size: 1.3em;
+	}
+}
+
 @media (max-width: 1280px){
 	#top-desc h1{
 		font-size: 7em;
@@ -342,7 +349,7 @@ textarea{
 	}
 
 	.section{
-		font-size: 0.75em;
+		font-size: 0.7em;
 	}
 }
 
