update external refs

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,19 +19,9 @@
   <!-- BSASE -->
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <!-- FONTS -->
-  <link href='http://fonts.googleapis.com/css?family=Exo+2:500,200' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Exo+2:400,200,500|Oswald' rel='stylesheet' type='text/css'>
   <!-- VENDORS -->
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
   <!-- JQUERY -->
-  <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script type="text/javascript">H5F.setup(document.getElementById('ss-form'));
-      _initFormViewer("[100,,[]\n]\n", true);
-  </script>
-
-  <!-- <script type="text/javascript" src="http://click.dj/assets/overlay/jquery.overlay-1.3.4.pack.js"></script>
-   <script type="text/javascript" src="http://click.dj/site/userdata/code?s=elemenocollective"></script>
-  <link rel="stylesheet" href="http://click.dj/assets/overlay/jquery.overlay-1.3.4.css" type="text/css" media="screen" >  -->
 </head>
